--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
         <title>Rick Roll Link Shortener</title>
     </head>
     <body>
+        <div id="con" style="display: none">
         <h1>Insert link below</h1>
         <input id="mainlink" style="width: 250px"></input>
         <input style="display: none" id="itself" type="checkbox"></input>
         <button id="submit">Submit</button>
+        </div>
         
         <h3 id="redirlink"></h3>
     </body>
