--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Rick Roll Link Shortener</title>
+        <title>A Link Shortener</title>
+        <link rel="shortcut icon" href="/fav.png"></link>
     </head>
     <body>
         <div id="con" style="display: none">
