--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </strong>
             <ol>
                 <li>Enter your url</li>
-                <li>Press the Sunbmit button</li>
+                <li>Press the Submit button</li>
                 <li>Copy and send the link to your friends!</li>
             </ol>
             </div>
