--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
             </ol>
             </div>
         </div>
+        <div id="footer">
+            <h5 id="version">
+                
+            </h5>
+        </div>
+        <div id="rt-footer">
+            <div style="margin-bottom: 10px">
+                <a href="https://twitter.com/theusafyt?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @theusafyt</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div>
+                <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FShortr-Link-Shortener-1956863007862767%2F&width=131&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId=1132344773559214" width="131" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            </div>
+        </div>
     </body>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="index.js"></script>
