URL now appears in textarea box

--- a/404.html
+++ b/404.html
@@ -11,4 +11,4 @@
         - Try a different link: such as <a href="https://shortr.github.io/?A">this!</a>
         </p>
     </body>
-</html>>
+</html>
