--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             </div>
         </div>
     </body>
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="index.js"></script>
 </html>
