--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>A Link Shortener</title>
         <link rel="shortcut icon" href="/fav.png"></link>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Montserrat');
         </style>
