--- a/tips/index.html
+++ b/tips/index.html
@@ -6,7 +6,7 @@
   <meta property="og:image:secure_url" content="https://shortr.github.io/images/hmm.png">
   <meta property="og:image" content="http://shortr.github.io/images/hmm.png">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:url" content="https://shortr.github.io/?A">
+  <meta property="og:url" content="https://shortr.github.io/tips/">
   <meta property="og:title" content="25 Top Tips For a Good Life!">
   <meta property="og:description" content="Learn how to enjoy life to the fullest!">
   <meta property="og:type" content="website">
